<?xml version="1.0"?>
<package format="2">
  <name>sma-link</name>
  <version>1.0.0</version>
  <description>Smart robot communication link</description>

  <maintainer email="info@ca-giken.com">CA-Giken</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/CA-Giken/sma-link</url>
  <author  email="info@ca-giken.com">CA-Giken</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
